--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,3 +1,24 @@
 <header class="header">
-
+   <div class="container">
+      <div class="header__top">
+         <div class="header__logo">
+            <img src="img/logo.jpg" alt="logo" class="logo">
+            <p class="text">Избавит вас от всех паразитов&nbsp;<br>
+               без побочных эффектов! </p>
+         </div>
+         <ul class="header__list">
+            <li class="item">
+               <a href="" class="link">Подходит для всей семьи</a>
+            </li>
+            <li class="item">
+               <a href="" class="link">Натуральный состав
+               </a>
+            </li>
+            <li class="item">
+               <a href="" class="link">Отзывы
+               </a>
+            </li>
+         </ul>
+      </div>
+   </div>
 </header>
