add advantages block

--- a/src/template/advantages.html
+++ b/src/template/advantages.html
@@ -1,48 +1,22 @@
-<header class="header block">
+<section class="advantages block">
    <div class="wrap">
-      <div class="header__top">
-         <div class="header__logo">
-            <img src="img/logo.png" alt="logo" class="logo">
-            <p class="text">Избавит вас от всех паразитов&nbsp;<br>
-               без побочных эффектов! </p>
-         </div>
-         <ul class="header__list">
-            <li class="item">
-               <a href="" class="link">
-                  <i class="fico fico-header-icon-1"></i>
-                  Подходит для всей семьи</a>
-            </li>
-            <li class="item">
-               <a href="" class="link">
-                  <i class="fico fico-header-icon-2"></i>
-                  Натуральный состав
-               </a>
-            </li>
-            <li class="item">
-               <a href="" class="link">
-                  <i class="fico fico-header-icon-3"></i>
-                  Отзывы
-               </a>
-            </li>
-         </ul>
-      </div>
-      <div class="header__main">
-         <div class="info header__info">
-            <h1 class="title header__title">Мощная чистка организма&nbsp;<br> от паразитов <span class="jade">3 в 1</span>
-            </h1>
+      <div class="advantages__content">
+         <div class="info advantages__info">
+            <h2 class="title advantages__title">Helmion — полное избавление&nbsp;<br> от паразитов с эффектом <span
+                  class="jade">3
+                  в 1</span></h2>
             <ul class="info__list">
-               <li class="item"><b class="font-bold">Выводит</b> все виды&nbsp;<br>паразитов, их личинки и яйца</li>
-               <li class="item"><b class="font-bold">Восстанавливает</b>&nbsp;<br>
-                  поврежденные паразитами органы</li>
-               <li class="item"><b class="font-bold">Создает защиту</b>&nbsp;<br>от повторного заражения на 2 года</li>
+               <li class="item">Выводит все виды
+                  паразитов&nbsp;<br> и их яйца</li>
+               <li class="item">Укрепляет иммунитет и восстанавливает поврежденный паразитами организм </li>
+               <li class="item">Создает естественную защиту от повторных заражений </li>
             </ul>
-            <div class="info__cost">
+            <div class="info__cost advantages__cost">
                Оплата при получении
                <i class="fico fico-cost"></i>
             </div>
-            <img src="img/product.png" alt="product" class="product">
+            <div class="img-wrap"><img src="img/product.png" alt="product" class="product"></div>
          </div>
-         <img src="img/people.png" alt="people" class="people">
          <div class="order-form">
             <form action="/submit" method="post" class="x_order_form form">
                <p class="form__date">
@@ -87,4 +61,4 @@
          </div>
       </div>
    </div>
-</header>
+</section>
