--- a/src/style/partials/header.sass
+++ b/src/style/partials/header.sass
@@ -61,10 +61,10 @@
 	&__title
 		text-align: left
 		margin-bottom: 40px
-
+	&__info
+		max-width: 395px
+		width: 100%
 .info
-	max-width: 395px
-	width: 100%
 	position: relative
 	&__list
 		font-size: 20px
@@ -162,6 +162,13 @@
 	background-color: #ffffff
 	border: 4px solid #199589
 	padding: 14px 24px 10px 24px
+	&::after
+		content: ''
+		display: block
+		position: absolute
+		right: -38px
+		top: 133px
+		+sprite($line)
 	&__date
 		text-align: center
 		font-size: 22px
@@ -216,6 +223,27 @@
 				color: #999999
 			&__value
 				font-size: 32px
+				position: relative
+				&::after
+					content: ''
+					display: block
+					position: absolute
+					transform-origin: 100% 0
+					width: 100%
+					bottom: 10px
+					height: 1px
+					background: #e56363
+					transform: rotate(14deg)
+				&::before
+					content: ''
+					display: block
+					position: absolute
+					transform-origin: 0 0
+					width: 100%
+					bottom: 10px
+					height: 1px
+					background: #e56363
+					transform: rotate(-14deg)
 			&__current
 				font-size: 16px
 		.new
