--- a/src/style/partials/advantages.sass
+++ b/src/style/partials/advantages.sass
@@ -1,6 +1,7 @@
 .advantages
 	padding: 90px 0
-	background: url('../img/back.jpg') no-repeat center top 
+	background: url('../img/back.jpg') no-repeat center top
+	background-size: cover
 	&__content
 		display: flex
 		justify-content: space-between
