--- a/src/template/parasites.html
+++ b/src/template/parasites.html
@@ -1,5 +1,100 @@
-<div class="block">
+<div class="block parasites">
     <div class="wrap">
-
+        <h2 class="title parasites-title">
+            Самые распространенные виды паразитов <span>захватывают разные участки организма</span>
+        </h2>
+        <div class="parasites-wrap">
+            <div class="parasites-fixed">
+                <div class="parasites-fixed__title">
+                    <p>Название<br> паразита</p>
+                </div>
+                <div class="parasites-fixed__item">
+                    <div class="parasites-img">
+                        <img src="img/parasites1.jpg" alt="">
+                    </div>
+                    <p class="parasites-fixed__text"><span class="font-bold">Enterobius Vermicularis</span> (острицы) общественным
+                        транспортом</p>
+                </div>
+                <div class="parasites-fixed__item">
+                    <div class="parasites-img">
+                        <img src="img/parasites2.jpg" alt="">
+                    </div>
+                    <p class="parasites-fixed__text"><span class="font-bold">Ascaris lumbricoides</span>
+                        (аскариды)</p>
+                </div>
+                <div class="parasites-fixed__item">
+                    <div class="parasites-img">
+                        <img src="img/parasites3.jpg" alt="">
+                    </div>
+                    <p class="parasites-fixed__text"><span class="font-bold">Trichocephalus trichiurus</span>
+                        (власоглавы)</p>
+                </div>
+                <div class="parasites-fixed__item">
+                    <div class="parasites-img">
+                        <img src="img/parasites4.jpg" alt="">
+                    </div>
+                    <p class="parasites-fixed__text"><span class="font-bold">Giardia</span> (лямблии)</p>
+                </div>
+            </div>
+            <div class="parasites-slider">
+                <div>
+                    <div class="parasites-block">
+                        <div class="parasites-block__title">
+                            <p>В каком органе<br> живет</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>В толстом кишечнике, гениталиях</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>В тонком кишечнике,сердце, печени и легких</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>В толстом и тонком кишечнике</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>В тонком кишечнике, мочевом пузыре и печени</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="parasites-block">
+                        <div class="parasites-block__title">
+                            <p>Размер и скорость<br> размножения</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>2-12 мм<br> 1 самка откладывает<br> <span class="font-bold">15 000 яиц</span> в сутки</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>150-400 мм<br> 1 самка откладывает<br> <span class="font-bold">240 000 яиц</span> в сутки</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>35-50 мм<br> 1 самка откладывает<br> <span class="font-bold">от 3 000 яиц</span> в сутки</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>0,001-0,018 мм<br> 1 самка откладывает<br> <span class="font-bold">5 000 яиц</span> в сутки</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="parasites-block parasites-block__last">
+                        <div class="parasites-block__title">
+                            <p>У скольких % людей встречается (статистика Минздрава)</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>46%</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>56%</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>40%</p>
+                        </div>
+                        <div class="parasites-block__item">
+                            <p>64%</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
