--- a/src/style/partials/parasites.scss
+++ b/src/style/partials/parasites.scss
@@ -1,3 +1,8 @@
+.parasites {
+  background: #ecf1f1;
+
+}
+
 .parasites-title {
   margin-bottom: 40px;
 
@@ -7,4 +12,109 @@
     font-weight: 500;
   }
 
+}
+
+.parasites-wrap {
+  display: flex;
+  color: #444444;
+  font-size: 18px;
+  line-height: 1.4;
+  box-shadow: 0px 1px 20px 4px #e4eceb;
+  border-radius: 5px;
+
+  .font-bold {
+    color: #222222;
+  }
+
+}
+
+.parasites-fixed {
+  width: 390px;
+  flex: none;
+
+  @include r(1199) {
+    width: 370px;
+  }
+
+}
+
+.parasites-fixed__item {
+  display: flex;
+  align-items: center;
+  background: #ffffff;
+}
+
+.parasites-fixed__text {
+  //font-size: 18px;
+  //line-height: 1.4;
+}
+
+.parasites-img {
+  margin-right: 15px;
+}
+
+.parasites-slider {
+  display: flex;
+}
+
+
+.parasites-block {
+  border-left: 1px solid #e0e1e1;
+  width: 245px;
+  flex: none;
+
+  @include r(1199) {
+    width: 230px;
+  }
+
+}
+
+.parasites-block__last {
+  width: 100%;
+  color: #fa6b6b;
+  font-size: 30px;
+  font-weight: 500;
+
+  .parasites-block__item {
+    justify-content: center;
+  }
+
+}
+
+.parasites-block__item {
+  display: flex;
+  align-items: center;
+  background: #ffffff;
+}
+
+.parasites-fixed__title,
+.parasites-block__title {
+  background: #ffffff;
+  padding: 25px;
+  color: #313e47;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 500;
+  border-bottom: 3px solid #199589;
+  min-height: 125px;
+
+  @include r(1199) {
+    padding: 10px;
+  }
+
+}
+
+.parasites-fixed__item,
+.parasites-block__item {
+  padding: 22px 25px;
+  min-height: 141px;
+
+  @include r(1199) {
+    padding: 10px;
+  }
+
+}
+.parasites-fixed__item:nth-child(2n),
+.parasites-block__item:nth-child(2n) {
+  background: #faf7e9;
 }
