--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -3,10 +3,11 @@
 @import "libs/_mixins"
 @import "libs/_reset"
 @import "../libs/grid.css"
+@import "libs/sprite.sass"
 
 
-//uncomment it if SVGSprite generator in sprite mode
-// @import "partials/sprite-svg"
+
+@import "partials/sprite-svg"
 
 
 
@@ -18,4 +19,5 @@
 
 @import "partials/advantages"
 @import "partials/others"
+@import "partials/order"
 @import "partials/footer"
