--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -7,9 +7,9 @@
 
 
 
-@import "partials/sprite-svg"
+//@import "partials/sprite-svg"
 
-
+@import "partials/font-icons"
 
 @import "partials/variables"
 @import "partials/typography"
