--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -8,9 +8,11 @@
 //uncomment it if SVGSprite generator in sprite mode
 // @import "partials/sprite-svg"
 
-@import "partials/font-icons"
+//@import "partials/font-icons"
 
 @import "partials/variables"
 @import "partials/typography"
 @import "partials/common"
 @import "partials/header"
+@import "partials/infection"
+@import "partials/doctor"
