adaptive header block

--- a/src/template/header.html
+++ b/src/template/header.html
@@ -34,7 +34,7 @@
                <li class="item"><b class="font-bold">Выводит</b> все виды&nbsp;<br>паразитов, их личинки и яйца</li>
                <li class="item"><b class="font-bold">Восстанавливает</b>&nbsp;<br>
                   поврежденные паразитами органы</li>
-               <li class="item"><b class="font-bold">Создает защиту</b>&nbsp;<br>от повторного заражения на 2 года</li>
+               <li class="item"><b class="font-bold">Создает защиту</b>&nbsp;<br>от повторного заражения на 2&nbsp;года</li>
             </ul>
             <div class="info__cost">
                Оплата при получении
