--- a/src/style/partials/header.sass
+++ b/src/style/partials/header.sass
@@ -6,26 +6,59 @@
 	padding-top: 31px
 	background: url('../img/header__back.jpg') no-repeat center bottom
 	background-size: cover
+	.wrap
+		+r(479)
+			width: 320px
 	&__top
 		display: flex
 		align-items: center
 		justify-content: space-between
 		margin-bottom: 50px
+		+r(1199)
+			margin-bottom: 40px
+		+r(1023)
+			flex-direction: column
+			margin-bottom: 25px
+		+r(639)
+			margin-bottom: 10px
+		+r(479)
+			margin-bottom: 5px
 	&__logo
 		display: flex
 		align-items: flex-start
+		+r(1023)
+			margin-bottom: 20px
+		+r(639)
+			margin-bottom: 0
+		+r(479)
+			flex-direction: column
+			text-align: center
 	.logo
 		margin-right: 25px
+		+r(1199)
+			margin-right: 15px
+		+r(479)
+			margin-right: 0
+			margin: auto
+			margin-bottom: 5px
 	.text
 		color: #333333
 		line-height: 1.25
+		+r(639)
+			font-size: 15px
 	&__list
 		display: flex
+		+r(639)
+			display: none
 		.item
 			padding-left: 49px
 			position: relative
 			+nlt
 				margin-right: 42px
+			+r(1199)
+				padding-left: 44px
+				+nlt
+					margin-right: 23px
 			.fico
 				color: #199589
 				display: inline-block
@@ -56,33 +89,101 @@
 		justify-content: flex-start
 		position: relative
 		padding-bottom: 45px
+		+r(1023)
+			flex-direction: column
+			padding-bottom: 0
 		.people
 			position: absolute
 			bottom: 0
 			left: 287px
 			pointer-events: none
+			+r(1199)
+				width: 530px
+				left: 245px
+				bottom: 140px
+			+r(1023)
+				left: -2px
+				width: 451px
+				bottom: 160px
+			+r(767)
+				display: none
 	&__title
 		text-align: left
 		margin-bottom: 40px
+		+r(1023)
+			margin-bottom: 25px
+			text-align: center
+		+r(639)
+			margin-bottom: 20px
+		+r(479)
+			margin-bottom: 10px
+			br
+				display: none
 	&__info
 		max-width: 395px
 		width: 100%
+		+r(1023)
+			max-width: 100%
+			margin-bottom: 25px
+		+r(639)
+			margin-bottom: 20px
 .info
 	position: relative
+	+r(767)
+		text-align: center
 	&__list
 		font-size: 20px
 		width: 285px
 		counter-reset: section
 		margin-bottom: 41px
+		+r(1023)
+			font-size: 17px
+			width: 100%
+			display: flex
+			justify-content: space-between
+			margin-bottom: 25px
+		+r(767)
+			flex-direction: column
+			width: 60%
+			margin: auto
+			text-align: left
+			margin-bottom: 25px
+		+r(639)
+			margin-bottom: 20px
+			font-size: 16px
+		+r(479)
+			width: 100%
 		.item
 			line-height: 1.2
 			padding-left: 70px
 			color: #313e47
 			position: relative
-			.font-bold
-				color: #28353e
 			+nlt
 				margin-bottom: 20px
+			+r(1023)
+				padding-left: 58px
+				+nlt
+					margin-bottom: 0
+					margin-right: 20px
+			+r(767)
+				padding-left: 58px
+				+nlt
+					margin-bottom: 20px
+					margin-right: 0
+			+r(639)
+				padding-left: 50px
+				&::before
+					width: 40px
+					height: 40px
+					font-size: 26px
+			+r(479)
+				padding-left: 45px
+				&::before
+					width: 35px
+					height: 35px
+					font-size: 22px
+			.font-bold
+				color: #28353e
 			&::before
 				content: counter(section)
 				counter-increment: section
@@ -110,6 +211,12 @@
 		position: relative
 		font-style: italic
 		color: #444444
+		+r(1023)
+			margin: auto
+			&::before, &::after
+				display: none
+		+r(767)
+			display: none
 		.fico
 			position: absolute
 			right: 15px
@@ -154,8 +261,22 @@
 		bottom: -110px
 		left: 363px
 		z-index: 2
+		+r(1199)
+			width: 450px
+			left: 309px
+			bottom: -110px
+		+r(1023)
+			bottom: -620px
+			left: 20px
+		+r(767)
+			position: static
+			width: 350px
+		+r(479)
+			width: 300px
 .order-form
 	margin-left: auto
+	+r(767)
+		margin: auto
 .form
 	z-index: 1
 	position: relative
@@ -172,6 +293,9 @@
 		right: -38px
 		top: 133px
 		+sprite($line)
+	+r(1260)
+		&::after
+			display: none
 	&__date
 		text-align: center
 		font-size: 22px
