--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -3,13 +3,8 @@
 @import "libs/_mixins"
 @import "libs/_reset"
 @import "../libs/grid.css"
-@import "libs/sprite"
-
-//uncomment it if SVGSprite generator in sprite mode
-// @import "partials/sprite-svg"
-
-@import "partials/font-icons"
-
+@import "partials/methods"
+@import "partials/how-to-use"
 @import "partials/variables"
 @import "partials/typography"
 @import "partials/common"
