den (material and components)

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -3,14 +3,16 @@
 @import "libs/_mixins"
 @import "libs/_reset"
 @import "../libs/grid.css"
-@import "libs/sprite"
+// @import "libs/sprite"
 
 //uncomment it if SVGSprite generator in sprite mode
 // @import "partials/sprite-svg"
 
-@import "partials/font-icons"
+// @import "partials/font-icons"
 
 @import "partials/variables"
 @import "partials/typography"
 @import "partials/common"
 @import "partials/header"
+@import "partials/components"
+@import "partials/material"
