--- a/src/style/partials/others.sass
+++ b/src/style/partials/others.sass
@@ -63,7 +63,7 @@
 			position: relative
 			margin: 0 7px
 			&:after,&:before
-				content: ""
+				content: ''
 				width: 1px
 				height: 70px
 				background-color: #000010
@@ -90,7 +90,7 @@
 			position: relative
 			margin-left: 68px
 			&:before
-				content: ""
+				content: ''
 				width: 50px
 				height: 230px
 				position: absolute
@@ -135,7 +135,7 @@
 		border-radius: 50px
 		position: relative
 		&:before
-			content: ""
+			content: ''
 			position: absolute
 			top: -10px
 			left: 50%
