--- a/src/style/partials/common.sass
+++ b/src/style/partials/common.sass
@@ -41,3 +41,24 @@ body
 .font
 	&-bold
 		font-weight: 700
+
+
+ul
+	list-style: none
+
+select:-moz-focusring, a:-moz-focusring
+	color: transparent
+	text-shadow: 0 0 0 #000
+
+*
+	&:focus, &:visited, &:active, &:hover
+		outline: 0 !important
+
+a
+	outline: 0 !important
+	&:focus, &:visited, &:active, &:hover
+		outline: 0 !important
+
+*::-moz-focus-inner
+	border: 0
+	outline: none
