--- a/src/style/partials/popup.sass
+++ b/src/style/partials/popup.sass
@@ -23,6 +23,7 @@
 	height: 610px
 	+r(991)
 		width: 300px !important
+		height: 640px
 	&__wrap
 		padding: 0 60px
 		display: flex
@@ -30,7 +31,7 @@
 		align-items: flex-end
 		height: 100%
 		+r(991)
-			padding: 30px 20px 20px 20px
+			padding: 70px 15px 20px
 			align-items: center
 		.popup-left
 			position: relative
@@ -38,6 +39,8 @@
 			flex-direction: column
 			padding-top: 50px
 			padding-bottom: 30px
+			+r(991)
+				display: none
 		.popup-logo
 			display: flex
 			align-items: flex-start
