--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -3,7 +3,7 @@
 @import "libs/_mixins"
 @import "libs/_reset"
 @import "../libs/grid.css"
-// @import "libs/sprite"
+@import "libs/sprite"
 @import "partials/methods"
 @import "partials/how-to-use"
 @import "libs/sprite.sass"
@@ -12,7 +12,7 @@
 //@import "partials/sprite-svg"
 
 
-// @import "partials/font-icons"
+@import "partials/font-icons"
 
 
 @import "partials/variables"
