--- a/src/template/order.html
+++ b/src/template/order.html
@@ -18,7 +18,7 @@
         		<div class="order-content-box__subtitle">Доставка бесплатная</div>
         	</div>
         </div>
-        <div class="btn order__btn">Без предоплаты</div>
+        <div class="btn order__btn ever-popup-btn">Без предоплаты</div>
         <div class="order__text">Вы можете прямо сейчас <b>получить бесплатную консультацию</b> специалиста.&nbsp;<br>
 Укажите свое имя и номер телефона в форме для заявки и нажмите кнопку заказа.&nbsp;<br>
 Наш оператор Вам перезвонит в ближайшее время.
