--- a/src/style/partials/order.sass
+++ b/src/style/partials/order.sass
@@ -103,7 +103,7 @@
 			color: #222222
 			font-weight: 500
 
-@media screen and (max-width: 1199px)
+@include r(1199)
 	.order
 		&-content
 			flex-wrap: wrap
@@ -126,7 +126,7 @@
 			line-height: normal
 			margin-top: 30px
 
-@media screen and (max-width: 1023px)
+@include r(1023)
 	.order
 		.title
 			br
@@ -167,7 +167,7 @@
 		&__text
 			margin-top: 25px
 
-@media screen and (max-width: 767px)
+@include r(767)
 	.order
 		.title
 			br
@@ -210,7 +210,7 @@
 			font-size: 15px
 			br
 				display: none
-@media screen and (max-width: 767px)
+@include r(639)
 	.order
 		.title
 			br
