yulik add  parasites block

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -8,6 +8,8 @@
 
 
 @import "partials/sprite-svg"
+@import "partials/slick.scss"
+@import "partials/slick-theme.scss"
 
 
 //@import "partials/font-icons"
