--- a/src/template/components.html
+++ b/src/template/components.html
@@ -1,5 +1,5 @@
 <!-- /.components -->
-<section class="components block">
+<section class="components block" id="components">
     <div class="wrap">
         <h2 class="title title-components">Helmion избавляет от всех видов паразитов</h2>
         <p class="subtitle-components">благодаря уникальной растительной формуле</p>
@@ -20,7 +20,7 @@
                 <p class="components__name">Маллотус филиппинский,<br> эмбелия смородиновая,<br> кора горького олеандра</p>
                 <div class="components__line"></div>
                 <p class="components__action">уничтожают все виды паразитов и их яйца</p>
-            </div> 
+            </div>
             <div class="components__item">
                 <div class="components__group">
                     <div class="components__img components__img-1">
@@ -52,10 +52,11 @@
                 <p class="components__name">Гардения широколистная,<br> корни одуванчика,<br> пижма</p>
                 <div class="components__line"></div>
                 <p class="components__action">создают устойчивость организма от повторного заражения</p>
-            </div>     
+            </div>
         </div>
 
-        <p class="components__bottom">Растительные экстракты взаимно дополняют и усиливают друг друга в&nbsp;комплексе лечебных свойств</p>
+        <p class="components__bottom">Растительные экстракты взаимно дополняют и усиливают друг друга в&nbsp;комплексе
+            лечебных свойств</p>
 
     </div>
 </section>
