--- a/src/template/header.html
+++ b/src/template/header.html
@@ -8,18 +8,18 @@
          </div>
          <ul class="header__list">
             <li class="item">
-               <a href="" class="link js-scroll">
+               <a href="#others" class="link js-scroll">
                   <i class="fico fico-header-icon-1"></i>
                   Подходит для всей семьи</a>
             </li>
             <li class="item">
-               <a href="" class="link js-scroll">
+               <a href="#components" class="link js-scroll">
                   <i class="fico fico-header-icon-2"></i>
                   Натуральный состав
                </a>
             </li>
             <li class="item">
-               <a href="" class="link js-scroll">
+               <a href="#" class="link js-scroll">
                   <i class="fico fico-header-icon-3"></i>
                   Отзывы
                </a>
