--- a/src/template/others.html
+++ b/src/template/others.html
@@ -1,4 +1,4 @@
-<section class="others block">
+<section class="others block" id="others">
     <div class="wrap">
         <h2 class="title">Если применять распространенные способы,<br> вам необходимы будут 2 препарата:</h2>
         <div class="others-content">
@@ -10,7 +10,7 @@
                 <div class="others-content-box__price">от <span>2000</span>руб.</div>
             </div>
             <div class="others-content-sing">
-            	<div class="others-content-sing__view">+</div>
+                <div class="others-content-sing__view">+</div>
             </div>
             <div class="others-content-box">
                 <div class="others-content-box__title">3 упаковки пробиотиков</div>
@@ -20,13 +20,14 @@
                 <div class="others-content-box__price">от <span>1000</span>руб.</div>
             </div>
             <div class="others-content-sing others-content-sing2">
-            	<div class="others-content-sing__view">=</div>
+                <div class="others-content-sing__view">=</div>
             </div>
             <div class="others-content-total">
-            	<div class="others-content-total__price">от <span>7000</span>руб.</div>
-            	<div class="others-content-total__subtitle">за курс <br>и 3,5 месяцев лечения</div>
+                <div class="others-content-total__price">от <span>7000</span>руб.</div>
+                <div class="others-content-total__subtitle">за курс <br>и 3,5 месяцев лечения</div>
             </div>
         </div>
-        <div class="others-attention">ВНИМАНИЕ! Многие аптечные средства нельзя сочетать между собой. <br>Они могут вызвать непредвиденные результаты.</div>
+        <div class="others-attention">ВНИМАНИЕ! Многие аптечные средства нельзя сочетать между собой. <br>Они могут
+            вызвать непредвиденные результаты.</div>
     </div>
 </section>
