--- a/src/style/partials/header.sass
+++ b/src/style/partials/header.sass
@@ -81,7 +81,7 @@
 			border-bottom: 1px dashed transparentize(#000000, .5)
 			transition: all .3s
 			&:hover
-				border-bottom-color: transparentize(#000000, .9999999999)
+				border-bottom: 1px dashed transparent
 				.fico
 					color: #fc8144
 	&__main
