--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -2,14 +2,14 @@
 @import "libs/_funcs"
 @import "libs/_mixins"
 @import "libs/_reset"
+@import "libs/_jquery.mCustomScrollbar"
 @import "../libs/grid.css"
-// @import "libs/sprite"
-@import "partials/methods"
-@import "partials/how-to-use"
+@import "libs/sprite"
+
 @import "libs/sprite.sass"
 
 
-//@import "partials/sprite-svg"
+// @import "partials/sprite-svg"
 
 
 // @import "partials/font-icons"
@@ -24,6 +24,10 @@
 @import "partials/infection"
 @import "partials/doctor"
 @import "partials/parasites"
+@import "partials/comments"
+
+@import "partials/methods"
+@import "partials/how-to-use"
 
 
 @import "partials/advantages"
