fixed photo product

--- a/src/style/partials/advantages.sass
+++ b/src/style/partials/advantages.sass
@@ -75,13 +75,16 @@
 				bottom: 50px
 			+r(1023)
 				bottom: -470px
-				left: -10px
+				right: -10px
 				width: 440px
+				left: auto
 	&__cost
 		width: 312px
 		padding-left: 45px
 	.order-form
 		margin: 0
+		+r(767)
+			margin: auto
 
 	.info
 		&__list
