--- a/src/template/header.html
+++ b/src/template/header.html
@@ -19,7 +19,7 @@
                </a>
             </li>
             <li class="item">
-               <a href="#" class="link js-scroll">
+               <a href="#comments" class="link js-scroll">
                   <i class="fico fico-header-icon-3"></i>
                   Отзывы
                </a>
