--- a/src/template/sec11.html
+++ b/src/template/sec11.html
@@ -5,8 +5,8 @@
       <div class="how-to-use__item">
         <div class="how-to-use__image how-to-use__image--first">
           <div class="how-to-use__number">1</div>
-          <img src="../img/sec11__pack.png" class="how-to-use__first-pack" />
-          <img src="../img/sec11__cup.png" class="how-to-use__cup" />
+          <img src="img/sec11__pack.png" class="how-to-use__first-pack" />
+          <img src="img/sec11__cup.png" class="how-to-use__cup" />
         </div>
         <div class="how-to-use__item-title">
           Разбавить гель в стакане воды или выпить в чистом виде
@@ -15,7 +15,7 @@
       <div class="how-to-use__item">
         <div class="how-to-use__image how-to-use__image--second">
           <div class="how-to-use__number">2</div>
-          <img src="../img/sec11__girl.png" class="how-to-use__girl" />
+          <img src="img/sec11__girl.png" class="how-to-use__girl" />
         </div>
         <div class="how-to-use__item-title">
           Принимать 2 раза<br />
@@ -26,8 +26,8 @@
         <div class="how-to-use__image how-to-use__image--third">
           <div class="how-to-use__number">3</div>
 
-          <img src="../img/sec11__pack.png" class="how-to-use__second-pack" />
-          <img src="../img/sec11__items.png" class="how-to-use__items" />
+          <img src="img/sec11__pack.png" class="how-to-use__second-pack" />
+          <img src="img/sec11__items.png" class="how-to-use__items" />
         </div>
         <div class="how-to-use__item-title">
           Рекомендуемый курс:<br />
