--- a/src/template/sec5.html
+++ b/src/template/sec5.html
@@ -7,7 +7,7 @@
       <div class="methods__item">
         <div class="methods__content">
           <div class="methods__image-block">
-            <img src="../img/methods_grass.png" class="methods__image" />
+            <img src="img/methods_grass.png" class="methods__image" />
           </div>
           <div class="methods__item-title">Методы на трава</div>
           <div class="methods__text-block">
@@ -32,10 +32,7 @@
       <div class="methods__item">
         <div class="methods__content">
           <div class="methods__image-block">
-            <img
-              src="../img/methods_pills.png"
-              class="methods__image methods__image--second"
-            />
+            <img src="img/methods_pills.png" class="methods__image methods__image--second" />
           </div>
           <div class="methods__item-title">Медикаменты</div>
           <div class="methods__text-block">
