--- a/src/template/comments.html
+++ b/src/template/comments.html
@@ -1,5 +1,5 @@
 <!-- /.comments block -->
-<section class="comments block">
+<section class="comments block" id="comments">
     <div class="wrap">
         <h2 class="title title-comments">Комментарии о Helmion</h2>
         <div class="comments__wrap">
@@ -11,7 +11,11 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Мария Колесникова</p>
-                        <p class="comments__text">Мои часто простужаются, хоть я их и оздоравливаю всячески: фрукты покупаю, на море ездим каждое лето… А потом моя знакомая врач порекомендовала сделать всей семьей профилактическую очистку от паразитов. Взяли для этого Хельмион, так как не доверяем препаратам не растительного происхождения. И вот, дети перестали так часто болеть. Думаю, у них таки были глисты, просто симптомы ярко не проявлялись.</p>
+                        <p class="comments__text">Мои часто простужаются, хоть я их и оздоравливаю всячески: фрукты
+                            покупаю, на море ездим каждое лето… А потом моя знакомая врач порекомендовала сделать всей
+                            семьей профилактическую очистку от паразитов. Взяли для этого Хельмион, так как не доверяем
+                            препаратам не растительного происхождения. И вот, дети перестали так часто болеть. Думаю, у
+                            них таки были глисты, просто симптомы ярко не проявлялись.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">8 дней назад</p>
@@ -27,7 +31,9 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Елена Головина</p>
-                        <p class="comments__text">После чистки организма Хельмионом - как будто помолодела. Мало устаю и больше за день успеваю сделать. И на внешности это тоже сказалось. Волосы, ногти, кожа – все стало моложе и здоровее. Приятненько так, даже муж заметил изменения.</p>
+                        <p class="comments__text">После чистки организма Хельмионом - как будто помолодела. Мало устаю
+                            и больше за день успеваю сделать. И на внешности это тоже сказалось. Волосы, ногти, кожа –
+                            все стало моложе и здоровее. Приятненько так, даже муж заметил изменения.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">6 дней назад</p>
@@ -43,7 +49,10 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Арсен Ничепоренко</p>
-                        <p class="comments__text">Живем с женой в частном доме и весной завели кота. Кот дома не сидит, гуляет во дворе. И мы только первую неделю мыли ему лапы, когда он заходил в дом. А потом забили. Так он принес нам глистов. Чистились с Хельмионом - нашли его в интернете. Эффект ощутимый, организм стал крепче, у меня боли в животе прошли, у жены - высыпаний больше нет.</p>
+                        <p class="comments__text">Живем с женой в частном доме и весной завели кота. Кот дома не сидит,
+                            гуляет во дворе. И мы только первую неделю мыли ему лапы, когда он заходил в дом. А потом
+                            забили. Так он принес нам глистов. Чистились с Хельмионом - нашли его в интернете. Эффект
+                            ощутимый, организм стал крепче, у меня боли в животе прошли, у жены - высыпаний больше нет.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">5 дней назад</p>
@@ -59,7 +68,12 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Нина Палиенко</p>
-                        <p class="comments__text">Прям почувствовала, как организм начал вычищаться с этим Хельмионом. Вздутие постоянное прекратилось, а то  меня живот вздувался, ходила как беременная. Стул теперь нормальный и регулярный. А ещё меня перестало тянуть на сладкое. Читала где-то, что это от паразитов в организме такое может быть - мол это они как бы сладкое требуют в организме и приходится им объедаться. В общем, я очень довольна, теперь хоть ожила по-человечески.</p>
+                        <p class="comments__text">Прям почувствовала, как организм начал вычищаться с этим Хельмионом.
+                            Вздутие постоянное прекратилось, а то меня живот вздувался, ходила как беременная. Стул
+                            теперь нормальный и регулярный. А ещё меня перестало тянуть на сладкое. Читала где-то, что
+                            это от паразитов в организме такое может быть - мол это они как бы сладкое требуют в
+                            организме и приходится им объедаться. В общем, я очень довольна, теперь хоть ожила
+                            по-человечески.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">4 дня назад</p>
@@ -75,7 +89,8 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Оксана Данилюк</p>
-                        <p class="comments__text">Спасибо большое производителям. У меня с этим хельмионом почистилась кожа хорошо, и запах неприятных изо рта прошел. </p>
+                        <p class="comments__text">Спасибо большое производителям. У меня с этим хельмионом почистилась
+                            кожа хорошо, и запах неприятных изо рта прошел. </p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">4 дня назад</p>
@@ -91,7 +106,12 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Виктория Белосветова</p>
-                        <p class="comments__text">О том, что у ребенка паразиты, я узнала случайно. Просто проходили медосмотр, стандартно сдавали кровь, мочу и кал, и в анализах обнаружили гельминтов. Я перепугалась конкретно. Полезла в интернет и начиталась там ужасов, как из людей червей достают. Тогда по рекомендации врача я быстренько купила Хельмион по интернету и начали пить. На всякий случай всей семьей пили, результат порадовал. Потом через пару недель сдавали анализы - и ничего уже не обнаружили.</p>
+                        <p class="comments__text">О том, что у ребенка паразиты, я узнала случайно. Просто проходили
+                            медосмотр, стандартно сдавали кровь, мочу и кал, и в анализах обнаружили гельминтов. Я
+                            перепугалась конкретно. Полезла в интернет и начиталась там ужасов, как из людей червей
+                            достают. Тогда по рекомендации врача я быстренько купила Хельмион по интернету и начали
+                            пить. На всякий случай всей семьей пили, результат порадовал. Потом через пару недель
+                            сдавали анализы - и ничего уже не обнаружили.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">4 дня назад</p>
@@ -123,7 +143,10 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Рената Сараева</p>
-                        <p class="comments__text">Бабушка моя настаивала, чтобы я полынь пила раз в полгода. А мне противно, оно горькое такое, да и сомневаюсь, что оно там реально что-то чистит. Когда съехались с парнем, начали пить Хельмион. Раз в год чистимся, и нормально, не болеем, и со здоровьем всё классно.</p>
+                        <p class="comments__text">Бабушка моя настаивала, чтобы я полынь пила раз в полгода. А мне
+                            противно, оно горькое такое, да и сомневаюсь, что оно там реально что-то чистит. Когда
+                            съехались с парнем, начали пить Хельмион. Раз в год чистимся, и нормально, не болеем, и со
+                            здоровьем всё классно.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">3 дня назад</p>
@@ -139,7 +162,8 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Галина Петренко</p>
-                        <p class="comments__text">Пила его, думала, что восстановлю кишечник и похудею. Но не подействовало оно так(</p>
+                        <p class="comments__text">Пила его, думала, что восстановлю кишечник и похудею. Но не
+                            подействовало оно так(</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">2 дня назад</p>
@@ -171,7 +195,10 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Людмила Федорова</p>
-                        <p class="comments__text">Хельмион мне порекомендовал врач как качественную альтернативу аптечным препаратам. Паразиты ушли, прям чувствую, как в животе теперь стало легче)) но не понравилось, что нужно целый курс пить, хотелось бы что-то такое, чтобы за раз от паразитов избавило</p>
+                        <p class="comments__text">Хельмион мне порекомендовал врач как качественную альтернативу
+                            аптечным препаратам. Паразиты ушли, прям чувствую, как в животе теперь стало легче)) но не
+                            понравилось, что нужно целый курс пить, хотелось бы что-то такое, чтобы за раз от паразитов
+                            избавило</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">2 дня назад</p>
@@ -187,7 +214,9 @@
                     </div>
                     <div class="comments__about">
                         <p class="comments__name">Дарина Николаева</p>
-                        <p class="comments__text">Дерматолог мне сказала, что высыпания у меня из-за паразитов скорее всего. Почистилась с этим препаратом, и кожа стала почти идеальной, меньше потеет и бяка всякая не вылазит. Да и чувствую, как организм в целом здоровее стал.</p>
+                        <p class="comments__text">Дерматолог мне сказала, что высыпания у меня из-за паразитов скорее
+                            всего. Почистилась с этим препаратом, и кожа стала почти идеальной, меньше потеет и бяка
+                            всякая не вылазит. Да и чувствую, как организм в целом здоровее стал.</p>
                         <div class="comments__bottom">
                             <div class="comments__info">
                                 <p class="comments__day">1 день назад</p>
