--- a/src/style/partials/how-to-use.scss
+++ b/src/style/partials/how-to-use.scss
@@ -179,19 +179,20 @@
   .how-to-use__item-title {
     font-size: 19px;
   }
-  .how-to-use__item:nth-child(3) {
-    margin-top: 50px;
-  }
+
   .how-to-use__title {
     font-size: 32px;
   }
-}
-
-@media (width: 1024px) {
   .how-to-use__item:nth-child(3) {
-    margin-top: 0px;
+    margin-top: 50px;
   }
 }
+@media (width: 1024px) {
+  .how-to-use__item:nth-child(3) {
+    margin-top: 0px !important;
+  }
+}
+
 @media (max-width: 768px) {
   .how-to-use {
     padding: 30px 0;
