--- a/src/style/partials/methods.scss
+++ b/src/style/partials/methods.scss
@@ -174,6 +174,9 @@
   .methods__bottom-line::after {
     display: none;
   }
+  .methods__wrap {
+    margin-bottom: 30px;
+  }
 
   .methods__item:first-child {
     margin-bottom: 100px;
